# RadRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_projects.bat  premake5.lua  radrenderer.sln
MyGraphicsEngine/GTestFramework/: GTestFramework.sln  GTestFramework.vcxproj  Gtest.cpp  UnitTests.vcxproj.filters
MyGraphicsEngine/MyGraphicsEngine/: EmazingDemo.cpp  EmazingEngine.cpp  EmazingEngine.h  Matrix.cpp  Matrix.h  Matrix4x4.cpp  Matrix4x4.h  MyGraphicsEngine.cpp  MyGraphicsEngine.sln  MyGraphicsEngine.vcxproj  MyGraphicsEngine.vcxproj.filters  RadRenderer.cpp  RadRenderer.h  blender_cube.txt  olcConsoleGameEngine.h
MyGraphicsEngine/MyGraphicsEngine/Debug/: vc142.idb
MyGraphicsEngine/MyGraphicsEngine/Debug/MyGraphicsEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MyGraphicsEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MyGraphicsEngine/UnitTests/: UnitTests.vcxproj  UnitTests.vcxproj.filters  engine_functions.cpp  matrix_functions.cpp  test_test.cpp  triangle_tests.cpp
main/: Camera.cpp  Camera.h  Object.cpp  Object.h  RadRenderer.cpp  camera.cpp  camera.hpp  embedded_font.hpp  file.cpp  file.hpp  gltfloader.cpp  gltfloader.hpp  main.cpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
mathz/: CMakeLists.txt  matrix.hpp  misc.hpp  quaternion.hpp  vector.hpp
rad_renderer/src/: main.cpp  pch.cpp  pch.h
rad_renderer/src/core/: Camera.h  RadRenderer.cpp  Window.cpp
radrenderer/: MyGraphicsEngine.vcxproj  MyGraphicsEngine.vcxproj.filters  radrenderer.sln  radrenderer.vcxproj  radrenderer.vcxproj.filters
radrenderer/src/: Matrix4x4.h  Object.cpp  RadDemo.cpp  RadRenderer.cpp  RadRenderer.h  RendererSettings.h  Window.cpp  Window.h  main.cpp  olcConsoleGameEngine.cpp  olcConsoleGameEngine.h  pch.h
radrenderer/src/core/: Camera.cpp  Camera.h  Object.cpp  Object.h  RadRenderer.cpp  RadRenderer.h  Window.cpp  Window.h
radrenderer/src/math/: Matrix.h  Quaternion.h  Vector.h
tests/: test_helper.hpp
tests/mathz/: test_quaternion.cpp
